--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "puppet/modules/git"]
 	path = puppet/modules/git
 	url = https://github.com/example42/puppet-git.git
+[submodule "puppet/modules/concat"]
+	path = puppet/modules/concat
+	url = https://github.com/puppetlabs/puppetlabs-concat.git
+[submodule "puppet/modules/phpmyadmin"]
+	path = puppet/modules/phpmyadmin
+	url = https://github.com/justicel/puppet-phpmyadmin.git
